# judge-system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prepare.sh  requirements.txt  run.sh
.github/workflows/: build.yml
config/example/: forth.json
config/systemd/: create-judge-cgroups.service  env.conf  judge.service
doc/: class.jsonc  编程题请求文档.md
exec/: chroot_make.sh  chroot_run.sh  chroot_runguard.sh  compile.sh  compile_executable.sh  create_cgroups.sh  create_net_namespace.sh  git_clone.sh  random_generator.sh
exec/check/standard/: run
exec/check/standard-trusted/: run
exec/check/static/: run
exec/compare/asan/: run
exec/compare/diff-all/: run
exec/compare/diff-ign-space/: run
exec/compare/diff-ign-trailing/: run
exec/compare/gtest/: run
exec/compare/valgrind/: run
exec/compile/ada/: run
exec/compile/asm/: run
exec/compile/asm-gcc/: run
exec/compile/bash/: run
exec/compile/c/: .syscall64  run  static
exec/compile/cpp/: run  static
exec/compile/csharp/: run
exec/compile/fortran95/: .syscall64  run
exec/compile/fsharp/: run
exec/compile/git/: run
exec/compile/go/: run
exec/compile/haskell/: run
exec/compile/java/: run
exec/compile/js/: run
exec/compile/lua/: run
exec/compile/makefile/: run
exec/compile/pas/: run
exec/compile/perl/: run
exec/compile/python2/: run
exec/compile/python3/: run
exec/compile/r/: run
exec/compile/ruby/: run
exec/compile/rust/: run
exec/compile/scala/: run
exec/compile/swift/: run
exec/compile/vbnet/: run
exec/run/asan/: run
exec/run/gtest/: .ignore_exit_code  run
exec/utils/: check_helper.sh  chroot_setup.sh  logging.sh  runguard.py  utils.sh
hack/: build.sh  install_packages.sh
include/: asset.hpp  config.hpp  logging.hpp  metrics.hpp  program.hpp  worker.hpp
include/common/: defer.hpp  exceptions.hpp  io_utils.hpp  json_utils.hpp  messages.hpp  net_utils.hpp  periodic_timer.hpp  scoped.hpp  scoped_fd.hpp  scoped_file.hpp  utils.hpp
include/judge/: choice.hpp  judger.hpp  programming.hpp  submission.hpp
include/monitor/: interrupt_monitor.hpp  monitor.hpp  prometheus.hpp
include/server/: config.hpp  judge_server.hpp  rabbitmq.hpp
include/server/forth/: forth.hpp
include/server/mcourse/: feedback.hpp  mcourse.hpp
include/server/proto/: programming.proto  proto.hpp
include/server/sicily/: sicily.hpp
include/sql/: mysql.hpp  mysql_impl.hpp  type_mapping.hpp
packaging/: judge.service.in  post-install.sh.in  pre-rm.sh.in
runguard/: CMakeLists.txt  README.md
runguard/include/: runguard_options.hpp
runguard/src/: cgroup.cpp  limits.cpp  run.cpp  runguard.cpp  system.cpp
script/: core_filter.py
src/: asset.cpp  config.cpp  env.cpp  logging.cpp  main.cpp  metrics.cpp  program.cpp
src/common/: io_utils.cpp  json_utils.cpp  net_utils.cpp  utils.cpp
src/judge/: choice.cpp  program_output.cpp  programming.cpp
src/monitor/: interrupt_monitor.cpp  monitor.cpp  prometheus.cpp
src/server/: config.cpp  rabbitmq.cpp
src/server/forth/: forth.cpp
src/server/mcourse/: feedback.cpp  mcourse.cpp
src/server/sicily/: sicily.cpp
src/sql/: mysql_impl.cpp
src/worker/: worker.cpp
test/4.0/programming/: docker-compose.yml  forth-dev.json  report.json  req1.jsonc  request-no-remote.json  request.json  request.jsonc  request_playground.json  request_playground_1.json  request_playground_2.json  test.py
unit-test/: MemoryCheckerTest.cpp  MultiLanguageTest.cpp  RabbitMQTest.cpp  RandomCheckerTest.cpp  StandardCheckerTest.cpp  StaticCheckerTest.cpp
unit-test/gtest/: GTestCheckerTest.cpp
unit-test/test/: mock_judge_server.hpp  worker_Test.cpp
